--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
+    "react-tiny-popover": "^8.0.4",
     "redux-persist": "^6.0.0",
     "yup": "^1.4.0"
   },
