--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
+    "react-simple-star-rating": "^5.1.7",
     "react-tiny-popover": "^8.0.4",
     "redux-persist": "^6.0.0",
     "yup": "^1.4.0"
