--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-simple-star-rating": "^5.1.7",
+    "react-timer-hook": "^3.0.7",
     "react-tiny-popover": "^8.0.4",
     "redux-persist": "^6.0.0",
     "yup": "^1.4.0"
